170624/hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  # serviceName: hello-sts
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      # conteneurs auxiliaires
      ## 1/ s'exécutent avant les ctns principaux, s'arrêtent avant l'execution de ces derniers
      ## 2/ sont la pour préconfigurer les ctns principaux
      ## 3/ dans le cas du statefulSet, les != noms d'hôtes bien définis 
      ##    permettent de différencier les configurations (ex: pod master / pod worker)
      containers:
        - image: bob2606/hello-http:0.8.11 
          name: hello
          volumeMounts:
            - name: mnt
              mountPath: /var/lib/hello-http
      # ajout d'un volume de type dossier vide
      volumes:
        - name: mnt
          emptyDir:
