170624/resources-load-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load
  name: load
  namespace: resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load
  template:
    metadata:
      labels:
        app: load
    spec:
      containers:
      - image: busybox
        name: busybox
        command:
          - /bin/sh
          - -c
          - while :;do :;done
