170624/wwwphp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wwwphp
  name: wwwphp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wwwphp
  template:
    metadata:
      labels:
        app: wwwphp
    spec:
      containers:
      - image: nginx:1.24
        name: www
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d
      - image: php:8.2-fpm
        name: php
        ports:
          - name: fpm
            containerPort: 9000
        volumeMounts:
          - name: data
            mountPath: /var/www/html
            subPath: siteweb
      volumes:
        - name: data
          nfs:
            server: 192.168.50.4
            path: /
            readOnly: true
        - name: nginx-conf
          configMap:
            name: wwwphp-nginx-cm
