170624/hello-sts-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello-set
spec:
  ports:
  # 1/ il n'y a pas d'IP commune => k get svc
  # 2/ la clé port: est obligatoire mais inutilisé  
  - port: 80
    protocol: TCP
    targetPort: 8080
  # ClusterIP de type "headless"
  clusterIP: None
  selector:
    app: hello
