170624/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    # ce label  est le lien entre le service et le déploiement
    # référence de .metadata.labels.app: hello de la ressource deploiement hello
    app: hello
  type: LoadBalancer
