170624/hello1-ingress-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello1
  name: hello1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello1
  template:
    metadata:
      labels:
        app: hello1
    spec:
      containers:
      - image: bob2606/hello-http:0.8.9
        name: hello1-http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello1
  name: hello1-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello1
