170624/hello2-ingress-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello2
  name: hello2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello2
  template:
    metadata:
      labels:
        app: hello2
    spec:
      containers:
      - image: bob2606/hello-http:0.8.9
        name: hello2-http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello2
  name: hello2-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello2
