170624/controler-ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellos
spec:
  ingressClassName: nginx
  rules:
    # serverName vhost nginx
    - host: hello-1.k8s.lan
      http:
        paths:
          - pathType: Prefix
            # ressource k8s sur laquelle où acheminer le trafic
            backend:
              # clusterIP du deploy
              service:
                name: hello1-svc
                # port d'entrée du service
                port:
                  number: 80
            path: /
    - host: hello-2.k8s.lan
      http:
        paths:
          - pathType: Prefix
            # ressource k8s sur laquelle où acheminer le trafic
            backend:
              # clusterIP du deploy
              service:
                name: hello2-svc
                # port d'entrée du service
                port:
                  number: 80
            path: /
