170624/np-deny-all.yml
# deny-all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  # ICI, l'objet {} veut dire RIEN
  # pas comme d'habitude dans les autres ressources k8s 
  # dans lesquelles ce la veur dire "pas encore configuré => config par défaut"
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
