170624/np-whoami-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whoami-ingress
  namespace: stage
spec:
  # on cible les pods qui ont le label app=whoami
  podSelector:
    # matchExpressions:
    #   - key: app
    #     operator: In
    #     values:
    #       - whoami
    #       - something-other
    matchLabels:
      app: whoami
      # OR
      # run: truc
  ingress:
    - from:
        ## selection des éléments qui peuvent enoyer des requêtes 
        # dans notre pod whoami dans le namespace stage
        
        ## on a un élément dans la liste from (une règle avec 2 clauses podSelection et namespaceSelector)
        # => ET logique entre les clauses
        
        ## OU 2 règles (deux éléments de la liste from ) avec chaque une clause
        # => OU logique entre les règles
        - podSelector:
            matchLabels:
              target: whoami
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
  # la règle ne concerne seulement que l'ingress
  policyTypes:
    - Ingress
